# gettext-ng

./: Cargo.toml
src/: lib.rs  metadata.rs  parser.rs
tests/: lib.rs
