[package]
name = "gettext-ng"
version = "0.4.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>", "NGnius (Graham) <ngniusness@gmail.com>"]
description = "A tweaked implementation of Gettext translation framework for Rust for NG's projects"
license = "MIT"
repository = "https://github.com/justinas/gettext"
readme = "README.md"
edition = "2021"

[dependencies]
byteorder = "1.3"
encoding = "0.2.32"
